--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -301,7 +301,7 @@ body
 	font-size 15px
 
 h1
-	color claro
+	color white
 	display block
 	font-family titulo
 	font-size 2.5em
@@ -309,7 +309,7 @@ h1
 	margin 0 
 	text-shadow 1px 1px 0 gris
 	small
-		color claro
+		color white
 		display block
 		font-size .5em
 		margin -.2em auto 0 auto
@@ -393,11 +393,11 @@ p
 @media screen and (min-width: 1250px) 
 	@import "bp4.styl"
 
-@media screen and (min-width: 929px) 
+@media screen and (min-width: 880px) 
 	@import "bp3.styl"
 
 
-@media screen and (max-width: 929px) 
+@media screen and (max-width: 880px) 
 	@import "bp2.styl"
 
 
