Hero listo con cambio de logo

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -21,7 +21,7 @@ article
 header
 	height 0
 	overflow hidden
-	padding-bottom 150px
+	padding-bottom 155px
 	padding-top 20px
 	position relative
 	h1
@@ -30,7 +30,7 @@ header
 	img
 		display block
 		margin  0 auto
-		width 80px
+		width 55px
 	.hero
 		height 100%
 		left -9em
@@ -127,6 +127,8 @@ footer
 				content "\e602"
 			&:hover
 				color #f6ca2d
+	.titulo
+		display none
 
 nav
 	cursor pointer
@@ -176,7 +178,7 @@ section
 	top -1px
 
 .sombra
-	height 170px
+	height 175px
 	left 0px
 	opacity .8
 	position absolute
