--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -14,17 +14,17 @@ header
 	width 100%
 	z-index 0
 	img 
-		left 1.2em
+		left 2em
 		height auto
 		position relative
-		top 1.2em
-		width 80px
+		top 1.3em
+		width 75px
 		z-index 3
 	h1
 		color white
 		display inline-block
 		font-size 2.5em
-		left 3em
+		left 3.5em
 		position absolute
 		top .3em
 		z-index 4
@@ -33,7 +33,7 @@ header
 			font-size .5em
 			left 5px
 			position absolute
-			top 48px
+			top 47px
 			white-space nowrap
 	.hero
 		display none
@@ -129,6 +129,25 @@ footer
 			&:hover
 				background #21b2e9
 				color white
+	.titulo
+		color #b3b3b3 
+		display block
+		font-family titulo
+		font-size 1.4em
+		font-weight normal
+		margin 0 
+		position absolute 
+		right 7.5em
+		top 1px 
+		small
+			color #b3b3b3 
+			display block
+			font-size .6em
+			max-width 17em
+			position absolute 
+			right -10.2em
+			top 2em 
+			white-space nowrap
 
 nav
 	bottom 50px
