BUEN PUNTO de recuperación

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -17,7 +17,7 @@ header
 		left 2em
 		height auto
 		position relative
-		top 1.3em
+		top .9em
 		width 90px
 		z-index 5
 		-webkit-filter: brightness(1.2);
