--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -4,7 +4,7 @@ body
 
 header
 	background-attachment: fixed;
-	background-image url(../img/hero3.jpg)
+	background-image url(../img/hero.jpg)
 	background-position center 50px
 	background-repeat no-repeat
 	background-size  100% auto
