--- a/css/bp4.styl
+++ b/css/bp4.styl
@@ -2,7 +2,7 @@
 article
 	.materiales_libro
 		.libros
-			border-right 1px solid borde
+			border-right 1px solid rgba(borde,.5)
 			border-bottom none
 			display inline-block
 			width 49%
@@ -11,5 +11,3 @@ article
 			margin 0 0 0 1em
 			width 40%
 
-// header
-// 	background-size  100% 200px 
