Corregido error del menú movil

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -108,11 +108,11 @@ footer
 				color white
 		.github
 			// background blue
-			border-right 1px solid borde
+			border-right 1px solid rgba(borde,.5)
 			color #b3b3b3 
 			left 0px
 			line-height 3.2em
-			padding 0 160.5px  
+			padding 0 159.5px  
 			position absolute
 			text-decoration none
 			top 0px
@@ -121,7 +121,7 @@ footer
 			&:before
 				content "\e609"
 				font-family icono
-				font-size 1.2em
+				font-size 1.35em
 			&:hover
 				background rgba(black,.05)
 				border-color borde
