--- a/css/estilos.css
+++ b/css/estilos.css
@@ -494,11 +494,11 @@ p:first-child {
     color: #fff;
   }
   footer .social .github {
-    border-right: 1px solid #c6cfd3;
+    border-right: 1px solid rgba(198,207,211,0.5);
     color: #b3b3b3;
     left: 0px;
     line-height: 3.2em;
-    padding: 0 160.5px;
+    padding: 0 159.5px;
     position: absolute;
     text-decoration: none;
     top: 0px;
@@ -508,7 +508,7 @@ p:first-child {
   footer .social .github:before {
     content: "\e609";
     font-family: icono;
-    font-size: 1.2em;
+    font-size: 1.35em;
   }
   footer .social .github:hover {
     background: rgba(0,0,0,0.05);
