--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -109,9 +109,9 @@ article
 			background azul
 			color fondo
 			float left
-			font-family mayuscula
+			font-family arial
 			font-size .5em
-			font-weight bold
+			font-weight normal
 			height 1.7em 
 			line-height 1.5
 			margin 1em 1.5em 0 0
@@ -144,6 +144,18 @@ article
 				position absolute
 				right .6em
 				top .3em
+	.contenido
+		.comando
+			background rgba(black,.05)
+			// border-left 3px solid rgba(black,.07)
+			margin 2em 0
+			.enunciado_comando
+				padding .5em 0
+				text-transform uppercase
+			pre
+				color #7c2887
+				margin 0 2em -.5em 2em
+				padding 0 0 1em 0
 	.materiales_video
 		background claro
 		border-bottom 1px solid borde
@@ -293,6 +305,34 @@ article
 				font-size 1.2em
 				padding 0 0 1em 0
 		// .guias
+	.terminal
+		background claro
+		border-bottom 1px solid borde
+		border-top 1px solid borde
+		padding 20px 0 0 0
+		.ventana_terminal
+			background #424242
+			border-radius 0 0 4px 4px
+			box-shadow 0px 5px 15px rgba(0,0,0,.5)
+			margin 30px 25px
+			padding .3em 0 .5em 0
+			position relative
+			.barra
+				background lightgrey
+				border-radius 6px 6px 0 0
+				height 25px
+				position absolute
+				top -25px
+				width 100%
+				.nombre_barra
+					color gris
+					left 45%
+					position absolute 
+					top -12px
+			pre
+				color white
+				padding 0 0 0 1em
+				text-align left
 
 body 
 	background fondo
@@ -325,10 +365,11 @@ h2
 	margin .5em 0 .5em 0
 
 h3
-	color azul
-	font-family mayuscula
+	font-size 1.2em
 	font-weight normal
-	letter-spacing -2px
+	margin 2em 1.7em .5em 1.7em
+	span
+		font-weight bold
 
 p
 	line-height 1.4
@@ -382,6 +423,10 @@ p
 		font-size 1.5em
 		margin 1em .5em
 		text-align center
+
+::selection
+	background yellow
+	color black
 
 // Break points
 
