--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -322,21 +322,18 @@ section
 .sombra
 	height 100px
 	left 0px
-	opacity .3
 	position absolute
 	top 0px
 	width 100%
-	z-index 1
-	// @css {
-	// 	background: -moz-linear-gradient(left,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 45%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-	// 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.65)), color-stop(45%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	// 	background: -webkit-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 45%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-	// 	background: -o-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 45%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-	// 	background: -ms-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 45%,rgba(0,0,0,0) 100%); /* IE10+ */
-	// 	background: linear-gradient(to right,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 45%,rgba(0,0,0,0) 100%); /* W3C */
-	// 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
-
-	// }
-
-
+	z-index -1
+	@css {
+		background: rgb(254,172,130); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
+	}
 
