--- a/css/estilos.css
+++ b/css/estilos.css
@@ -783,12 +783,27 @@ p:first-child {
   .sombra {
     height: 100px;
     left: 0px;
-    opacity: 0.3;
     position: absolute;
     top: 0px;
     width: 100%;
-    z-index: 1;
+    z-index: -1;
+background: rgb(254,172,130); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
   }
+background: rgb(254,172,130); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
 }
 @media screen and (max-width: 880px) {
   article figure {
@@ -1001,12 +1016,27 @@ p:first-child {
   .sombra {
     height: 175px;
     left: 0px;
-    opacity: 0.6;
     position: absolute;
     top: 0px;
     width: 100%;
-    z-index: -1;
+    z-index: -5;
+background: rgb(254,172,130); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
   }
+background: rgb(254,172,130); /* Old browsers */
+		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
 }
 @media screen and (max-width: 641px) {
   article {
