Color principal lila

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -145,7 +145,7 @@ footer
 				background #21b2e9
 				color white
 	.titulo
-		color #7c2887 
+		color lila
 		display block
 		font-family titulo
 		font-size 1.3em
