--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,7 +46,7 @@ article .encabezado .libro:before {
   top: 0.3em;
 }
 article .encabezado .numero {
-  background: #2480e2;
+  background: #7c2887;
   color: #edf1f3;
   float: left;
   font-family: arial;
@@ -63,7 +63,7 @@ article .encabezado .numero {
 }
 article .encabezado .numero:after {
   border-top: solid 0 transparent;
-  border-left: solid 0.7em #2480e2;
+  border-left: solid 0.7em #7c2887;
   border-bottom: solid 1.8em transparent;
   border-right: solid 0 transparent;
   content: "";
@@ -88,11 +88,14 @@ article .encabezado .video:before {
   top: 0.3em;
 }
 article .contenido .comando {
-  background: rgba(0,0,0,0.05);
-  margin: 2em 0;
+  background: rgba(0,0,0,0.03);
+  margin: 1em 0 2em 0;
 }
 article .contenido .comando .enunciado_comando {
-  padding: 0.5em 0;
+  font-size: 0.8em;
+  letter-spacing: 2px;
+  margin: 0 0 0 30px;
+  padding: 0.5em 0 1.5em 0;
   text-transform: uppercase;
 }
 article .contenido .comando pre {
@@ -158,7 +161,7 @@ article .materiales_video .video .detalles .resumen {
 }
 article .materiales_video .video .detalles .titulo {
   border-bottom: 1px solid rgba(198,207,211,0.3);
-  color: #2480e2;
+  color: #7c2887;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -207,7 +210,7 @@ article .materiales_libro .libros .ejemplar .detalles .resumen {
   margin: 0;
 }
 article .materiales_libro .libros .ejemplar .detalles .titulo {
-  color: #2480e2;
+  color: #7c2887;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -260,7 +263,7 @@ article .materiales_libro .guias .ejemplar .detalles .resumen {
   margin: 0;
 }
 article .materiales_libro .guias .ejemplar .detalles .titulo {
-  color: #2480e2;
+  color: #7c2887;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -279,39 +282,6 @@ article .materiales_libro .guias .ejemplar .portada img {
 article .materiales_libro .guias .grupo {
   font-size: 1.2em;
   padding: 0 0 1em 0;
-}
-article .terminal {
-  background: #ebf0f4;
-  border-bottom: 1px solid #c6cfd3;
-  border-top: 1px solid #c6cfd3;
-  padding: 20px 0 0 0;
-}
-article .terminal .ventana_terminal {
-  background: #424242;
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
-  margin: 30px 25px;
-  padding: 0.3em 0 0.5em 0;
-  position: relative;
-}
-article .terminal .ventana_terminal .barra {
-  background: #d3d3d3;
-  border-radius: 6px 6px 0 0;
-  height: 25px;
-  position: absolute;
-  top: -25px;
-  width: 100%;
-}
-article .terminal .ventana_terminal .barra .nombre_barra {
-  color: #515151;
-  left: 45%;
-  position: absolute;
-  top: -12px;
-}
-article .terminal .ventana_terminal pre {
-  color: #fff;
-  padding: 0 0 0 1em;
-  text-align: left;
 }
 body {
   background: #edf1f3;
@@ -345,9 +315,10 @@ h2 {
   margin: 0.5em 0 0.5em 0;
 }
 h3 {
-  font-size: 1.2em;
+  color: #515151;
+  font-size: 1.5em;
   font-weight: normal;
-  margin: 2em 1.7em 0.5em 1.7em;
+  margin: 2em 1.7em 0.5em 30px;
 }
 h3 span {
   font-weight: bold;
@@ -618,7 +589,7 @@ p:first-child {
     display: block;
   }
   nav ul li .capitulo {
-    background: #2480e2;
+    background: #7c2887;
     border-radius: 5px;
     color: #ebf0f4;
     margin: 1.2em 0 1.3em 1em;
@@ -630,7 +601,7 @@ p:first-child {
     background: #515151;
   }
   nav ul li .ejercicio:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e603";
     font-family: icono;
     font-size: 1.2em;
@@ -643,7 +614,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .iniciando:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e605";
     font-family: icono;
     font-size: 1.2em;
@@ -656,7 +627,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .libro:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e600";
     font-family: icono;
     font-size: 1.1em;
@@ -669,7 +640,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .oro:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e604";
     font-family: icono;
     font-size: 1.2em;
@@ -684,7 +655,7 @@ p:first-child {
   nav ul li .solo {
     border: 1px solid rgba(111,129,148,0.5);
     border-radius: 5px;
-    color: #2480e2;
+    color: #7c2887;
     margin: 0 0 0.2em 1em;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
@@ -697,7 +668,7 @@ p:first-child {
   nav ul li .uno:after {
     background: #ebf0f4;
     border-radius: 50%;
-    color: #2480e2;
+    color: #7c2887;
     content: "1";
     font-family: arial;
     font-size: 0.9em;
@@ -713,7 +684,7 @@ p:first-child {
     color: #515151;
   }
   nav ul li .video:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e601";
     font-family: icono;
     font-size: 1.1em;
@@ -737,14 +708,14 @@ p:first-child {
     border-bottom: none;
   }
   nav ul ul a {
-    color: #2480e2;
+    color: #7c2887;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
   }
   nav ul ul a:after {
-    color: rgba(36,128,226,0.7);
+    color: rgba(124,40,135,0.7);
     content: "\e613";
     font-family: icono2;
     font-size: 1.2em;
@@ -856,7 +827,7 @@ background: rgb(254,172,130); /* Old browsers */
     z-index: -2;
   }
   footer {
-    background: #2480e2;
+    background: #7c2887;
     height: 10em;
   }
   footer .avatar {
@@ -986,8 +957,8 @@ background: rgb(254,172,130); /* Old browsers */
     padding: 0.6em 0 2em 0;
   }
   #mm0 {
-    background: #2480e2;
-    border: 0.5px solid rgba(36,128,226,0.05);
+    background: #7c2887;
+    border: 0.5px solid rgba(124,40,135,0.05);
     color: #fff;
     cursor: pointer;
     font-size: 1.5em;
@@ -1072,7 +1043,7 @@ background: rgb(254,172,130); /* Old browsers */
     margin: 0 auto;
   }
   footer {
-    background: #2480e2;
+    background: #7c2887;
     height: 10em;
   }
   footer .avatar {
