--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -144,7 +144,12 @@ section
 			margin .5em 3% 
 			width 95%
 
-
+.terminal
+	.ventana_terminal
+		.barra 
+			.nombre_barra
+				left 30%
+	
 
 
 
