--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -88,8 +88,33 @@ article
 	padding 0 0 1em 0
 	&:last-child
 		margin-bottom 4.5em
+	.contenido
+		.comando
+			background rgba(black,.03)
+			margin 1em 0 2em 0
+
+			.enunciado_comando
+				font-size .8em
+				letter-spacing 2px
+				margin 0 0 0 margen
+				padding .5em 0 1.5em 0
+				text-transform uppercase
+			pre
+				color #7c2887
+				margin 0 2em -.5em 2em
+				padding 0 0 1em 0
 	.encabezado
 		margin 0 0 1em 0
+		.comando
+			&:before
+				color claro
+				content "\e604"
+				font-family icono
+				font-size .9em
+				font-weight none
+				position absolute
+				right .6em
+				top .3em
 		.iniciando
 			&:before
 				color claro
@@ -384,6 +409,14 @@ p
 		border 1px solid gris
 		color claro
 
+.pdf
+	margin 3em auto 2em auto
+	width 12em
+	&:before
+		content '\e620'
+		font-family icono2
+		margin 0 .5em 0 0
+
 .caja
 	background claro
 	border-top 1px solid borde
@@ -448,7 +481,7 @@ p
 			&:before
 				content '$ '
 		.retorno
-			color #3fc1fb
+			color #e5db74
 
 ::selection
 	background yellow
