--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -162,13 +162,14 @@ section
 	padding .6em 0 2em 0
 
 #mm0
-	background azul
+	background #1e004b
 	border .5px solid rgba(azul,.05)
 	color white
 	cursor pointer
 	font-size 1.5em
 	height 2em
 	left -5px
+	// opacity .9
 	position relative
 	width 109%
 
@@ -185,6 +186,7 @@ section
 	box-shadow 0 2px 0 rgba(gris,.2)
 	left 0px
 	position fixed
+	opacity .98
 	right 0px
 	top -1px
 
