--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -100,7 +100,7 @@ article
 				padding .5em 0 1.5em 0
 				text-transform uppercase
 			pre
-				color #7c2887
+				color #e0275c
 				margin 0 2em -.5em 2em
 				padding 0 0 1em 0
 	.encabezado
