--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -18,7 +18,7 @@ article
 				.detalles
 					left 8.5em
 				.portada
-					margin 0 1em 2em 0
+					margin 0 1em 0 0
 					width 28%
 	figure
 		.laptop
