Añadidos comentarios disqus

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -162,7 +162,7 @@ section
 	padding .6em 0 2em 0
 
 #mm0
-	background #1e004b
+	background #6a2273
 	border .5px solid rgba(azul,.05)
 	color white
 	cursor pointer
