--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -14,7 +14,7 @@ body
 
 header
 	background-attachment: fixed;
-	background-image url(../img/hero.jpg)
+	background-image url(../img/hero.png)
 	background-position center 50px
 	background-repeat no-repeat
 	background-size  100% auto
@@ -320,6 +320,10 @@ section
 	top 20px
 	-webkit-transition all .5s ease
 	transition all .5s ease
+
+.social
+	.comentario
+		padding 0 1em
 
 .sombra
 	height 100px
