Nuevo tema turquesa con cambio de logo

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -28,11 +28,8 @@ article
 					width 12%
 
 header
-	height 0
-	overflow hidden
-	padding-bottom 155px
-	padding-top 20px
-	position relative
+	background gris
+	padding 1em 0 
 	h1
 		text-align center
 
@@ -40,15 +37,6 @@ header
 		display block
 		margin  0 auto
 		width 85px
-		// -webkit-filter: brightness(1.1);
-	.hero
-		height 100%
-		left -9em
-		margin 0 auto
-		position absolute
-		top 0
-		width auto
-		z-index -2
 
 footer
 	background azul
@@ -162,14 +150,13 @@ section
 	padding .6em 0 2em 0
 
 #mm0
-	background #6a2273
+	background turquesa
 	border .5px solid rgba(azul,.05)
 	color white
 	cursor pointer
 	font-size 1.5em
 	height 2em
 	left -5px
-	// opacity .9
 	position relative
 	width 109%
 
@@ -189,24 +176,6 @@ section
 	opacity .98
 	right 0px
 	top -1px
-
-.sombra
-	height 175px
-	left 0px
-	position absolute
-	top 0px
-	width 100%
-	z-index -5
-	@css {
-		background: rgb(254,172,130); /* Old browsers */
-		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
-	}
 
 		
 
