--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -119,10 +119,12 @@ footer
 			&:hover
 				color #f6ca2d
 
-header
-	.hero
-		left -16em
-		width auto
+// header
+// 	.hero
+// 		bottom 0em
+// 		height auto
+// 		margin 0 0 0 -9em
+// 		width 130% 
 
 p
 	line-height 1.4
