--- a/css/estilos.css
+++ b/css/estilos.css
@@ -72,7 +72,7 @@ article .encabezado .libro:before {
   top: 0.3em;
 }
 article .encabezado .numero {
-  background: #7c2887;
+  background: #21baad;
   color: #edf1f3;
   float: left;
   font-family: arial;
@@ -89,7 +89,7 @@ article .encabezado .numero {
 }
 article .encabezado .numero:after {
   border-top: solid 0 transparent;
-  border-left: solid 0.7em #7c2887;
+  border-left: solid 0.7em #21baad;
   border-bottom: solid 1.8em transparent;
   border-right: solid 0 transparent;
   content: "";
@@ -171,7 +171,7 @@ article .materiales_video .video .detalles .resumen {
 }
 article .materiales_video .video .detalles .titulo {
   border-bottom: 1px solid rgba(198,207,211,0.3);
-  color: #7c2887;
+  color: #21baad;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -220,7 +220,7 @@ article .materiales_libro .libros .ejemplar .detalles .resumen {
   margin: 0;
 }
 article .materiales_libro .libros .ejemplar .detalles .titulo {
-  color: #7c2887;
+  color: #21baad;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -273,7 +273,7 @@ article .materiales_libro .guias .ejemplar .detalles .resumen {
   margin: 0;
 }
 article .materiales_libro .guias .ejemplar .detalles .titulo {
-  color: #7c2887;
+  color: #21baad;
   font-family: lucida grande;
   font-size: 1.2em;
   letter-spacing: -1px;
@@ -306,15 +306,15 @@ h1 {
   font-size: 2.5em;
   font-weight: normal;
   margin: 0;
-  text-shadow: 1px 1px 0 #515151;
 }
 h1 small {
-  color: #fff;
+  color: rgba(255,255,255,0.5);
   display: block;
+  font-family: BenchNine, sans-serif;
   font-size: 0.5em;
-  margin: -0.2em auto 0 auto;
-  max-width: 17em;
-  text-shadow: 1px 1px 0 #515151;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  whitespace: nowrap;
 }
 h2 {
   display: inline-block;
@@ -370,8 +370,8 @@ p:first-child {
   background: #515151;
 }
 .instalar {
-  color: #7c2887;
-  border: 1px solid #7c2887;
+  color: #21baad;
+  border: 1px solid #21baad;
   border-radius: 5px;
   text-decoration: none;
   display: block;
@@ -503,11 +503,7 @@ p:first-child {
     position: relative;
   }
   header {
-    background-attachment: fixed;
-    background-image: url("../img/hero.png");
-    background-position: center 50px;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background: #515151;
     height: 100px;
     left: 0px;
     top: 0px;
@@ -518,29 +514,19 @@ p:first-child {
     left: 2em;
     height: auto;
     position: relative;
-    top: 0.9em;
-    width: 90px;
-    z-index: 5;
+    top: 0.78em;
+    width: 7em;
   }
   header h1 {
-    color: #fff;
-    display: inline-block;
-    font-size: 2.5em;
-    left: 3.5em;
+    left: 4.3em;
     position: absolute;
     top: 0.3em;
-    z-index: 4;
   }
   header h1 small {
-    color: #fff;
-    font-size: 0.5em;
     left: 5px;
     position: absolute;
     top: 47px;
     white-space: nowrap;
-  }
-  header .hero {
-    display: none;
   }
   footer {
     background: #ebf0f4;
@@ -646,7 +632,7 @@ p:first-child {
     color: #fff;
   }
   footer .titulo {
-    color: #7c2887;
+    color: #21baad;
     display: block;
     font-family: lobster, sans-serif;
     font-size: 1.3em;
@@ -676,7 +662,7 @@ p:first-child {
     display: block;
   }
   nav ul li .capitulo {
-    background: #7c2887;
+    background: #21baad;
     border-radius: 5px;
     color: #ebf0f4;
     margin: 1.2em 0 1.3em 1em;
@@ -688,7 +674,7 @@ p:first-child {
     background: #515151;
   }
   nav ul li .ejercicio:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e603";
     font-family: icono;
     font-size: 1.2em;
@@ -701,7 +687,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .iniciando:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e605";
     font-family: icono;
     font-size: 1.2em;
@@ -714,7 +700,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .libro:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e600";
     font-family: icono;
     font-size: 1.1em;
@@ -727,7 +713,7 @@ p:first-child {
     background: rgba(0,0,0,0.05);
   }
   nav ul li .oro:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e604";
     font-family: icono;
     font-size: 1.2em;
@@ -742,7 +728,7 @@ p:first-child {
   nav ul li .solo {
     border: 1px solid rgba(111,129,148,0.5);
     border-radius: 5px;
-    color: #7c2887;
+    color: #21baad;
     margin: 0 0 0.2em 1em;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
@@ -755,7 +741,7 @@ p:first-child {
   nav ul li .uno:after {
     background: #ebf0f4;
     border-radius: 50%;
-    color: #7c2887;
+    color: #21baad;
     content: "1";
     font-family: arial;
     font-size: 0.9em;
@@ -771,7 +757,7 @@ p:first-child {
     color: #515151;
   }
   nav ul li .video:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e601";
     font-family: icono;
     font-size: 1.1em;
@@ -795,14 +781,14 @@ p:first-child {
     border-bottom: none;
   }
   nav ul ul a {
-    color: #7c2887;
+    color: #21baad;
     padding: 0.4em 1.5em 0.4em 1em;
     position: relative;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
   }
   nav ul ul a:after {
-    color: rgba(124,40,135,0.7);
+    color: rgba(33,186,173,0.7);
     content: "\e613";
     font-family: icono2;
     font-size: 1.2em;
@@ -844,30 +830,6 @@ p:first-child {
   .social .comentario {
     padding: 0 1em;
   }
-  .sombra {
-    height: 100px;
-    left: 0px;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    z-index: -1;
-background: rgb(254,172,130); /* Old browsers */
-		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
-  }
-background: rgb(254,172,130); /* Old browsers */
-		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
 }
 @media screen and (max-width: 880px) {
   article figure {
@@ -896,11 +858,8 @@ background: rgb(254,172,130); /* Old browsers */
     width: 12%;
   }
   header {
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 155px;
-    padding-top: 20px;
-    position: relative;
+    background: #515151;
+    padding: 1em 0;
   }
   header h1 {
     text-align: center;
@@ -910,17 +869,8 @@ background: rgb(254,172,130); /* Old browsers */
     margin: 0 auto;
     width: 85px;
   }
-  header .hero {
-    height: 100%;
-    left: -9em;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-    width: auto;
-    z-index: -2;
-  }
   footer {
-    background: #7c2887;
+    background: #21baad;
     height: 10em;
   }
   footer .avatar {
@@ -1050,8 +1000,8 @@ background: rgb(254,172,130); /* Old browsers */
     padding: 0.6em 0 2em 0;
   }
   #mm0 {
-    background: #6a2273;
-    border: 0.5px solid rgba(124,40,135,0.05);
+    background: #21baad;
+    border: 0.5px solid rgba(33,186,173,0.05);
     color: #fff;
     cursor: pointer;
     font-size: 1.5em;
@@ -1078,30 +1028,6 @@ background: rgb(254,172,130); /* Old browsers */
     right: 0px;
     top: -1px;
   }
-  .sombra {
-    height: 175px;
-    left: 0px;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    z-index: -5;
-background: rgb(254,172,130); /* Old browsers */
-		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
-  }
-background: rgb(254,172,130); /* Old browsers */
-		background: -moz-linear-gradient(top,  rgba(254,172,130,1) 0%, rgba(255,206,151,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(254,172,130,1)), color-stop(100%,rgba(255,206,151,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  rgba(254,172,130,1) 0%,rgba(255,206,151,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feac82', endColorstr='#ffce97',GradientType=0 ); /* IE6-9 */
 }
 @media screen and (max-width: 641px) {
   article {
@@ -1137,7 +1063,7 @@ background: rgb(254,172,130); /* Old browsers */
     margin: 0 auto;
   }
   footer {
-    background: #7c2887;
+    background: #21baad;
     height: 10em;
   }
   footer .avatar {
@@ -1242,10 +1168,6 @@ background: rgb(254,172,130); /* Old browsers */
   footer .social .email:hover {
     color: #f6ca2d;
   }
-  header .hero {
-    left: -16em;
-    width: auto;
-  }
   p {
     line-height: 1.4;
     margin: 0.5em 0.7em;
@@ -1268,11 +1190,5 @@ background: rgb(254,172,130); /* Old browsers */
   }
   .terminal .ventana_terminal {
     margin: 30px 0.5em;
-  }
-}
-@media screen and (max-width: 430px) {
-  header .hero {
-    left: -22em;
-    width: auto;
   }
 }
