Reajuste hero para vista movil

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -119,12 +119,12 @@ footer
 			&:hover
 				color #f6ca2d
 
-// header
-// 	.hero
-// 		bottom 0em
-// 		height auto
-// 		margin 0 0 0 -9em
-// 		width 130% 
+header
+	h1
+		small
+			font-size .4em
+	img
+		width 70px
 
 p
 	line-height 1.4
